[129] Fix add column button to not overlap with last column header
This patch updates the add column button to not overlap with the last
column header in the product specifications table. It also fixes an
issue where the product header could not be clicked when the gradient
was overlapping. The gradient fades out once the carousel container has
been scrolled to the end and fades back in when overlapping with the
column headers.

http://go/scrcast/NjAyNzgyMTQyMzAwMTYwMHw0YTEyNzA3OC05NQ

(cherry picked from commit 3ded0419a5c82ab944c8d5ce561d6a6246ab9a9b)

Bug: 362311491
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5829612
Commit-Queue: Chase Hartsell <chazzy@chromium.org>
Cr-Original-Commit-Position: refs/heads/main@{#1350988}
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5837185
Commit-Queue: Matthew Jones <mdjones@chromium.org>
Cr-Commit-Position: refs/branch-heads/6668@{#1099}
Cr-Branched-From: 05bc664984ca075216b7f2198c88b9725bfa1b9b-refs/heads/main@{#1343869}

--- a/chrome/browser/resources/commerce/product_specifications/horizontal_carousel.css
+++ b/chrome/browser/resources/commerce/product_specifications/horizontal_carousel.css
@@ -81,29 +81,24 @@
     border-radius: 8px;
   }
 
-  ::slotted([slot=selector]) {
-    position: sticky;
-    right: 0;
-    top: 0;
-  }
-
-  :host([can-scroll]) ::slotted([slot=selector]) {
-    /* Prevent scrolling past the slotted selector. */
-    position: absolute;
-    z-index: 2;
-  }
-
-  #gradientLayer {
+  #selectorGradient {
     display: none;
+    opacity: 0;
+    pointer-events: none;
   }
 
-  :host([can-scroll]) #gradientLayer {
+  :host([can-scroll]) #selectorGradient {
     background: linear-gradient(270deg, white 10%, transparent 110%);
     display: block;
-    height: 50px;
+    height: 42px;
     position: absolute;
     right: 0;
     top: 0;
+    transition: opacity 0.2s ease-out;
     width: 134px;
     z-index: 1;
+  }
+
+  :host([show-forward-button_]) #selectorGradient {
+    opacity: 1;
   }
